# lemon

./: .gitignore  .nvimlog  CMakeLists.txt  README.md  Untitled
benchmarks/: README.md  price_level_benchmark.cpp
benchmarks/results/: comparison.md  environment.txt  lemon_cpp.json  pricelevel_rust.json
benchmarks/rust_baseline/: Cargo.toml
benchmarks/rust_baseline/src/: main.rs
cmake/: lemonConfig.cmake.in
docs/: PRICELEVEL_PARITY.md  status.md
examples/: order_queue_matching.cpp  order_variants.cpp  price_level_matching.cpp  price_level_snapshot.cpp
include/lemon/: lemon.hpp
include/lemon/detail/: errors.hpp  orderBook.hpp
include/lemon/detail/execution/: match_result.hpp  trade.hpp
include/lemon/detail/orders/: order_type.hpp  order_update.hpp
include/lemon/detail/pricelevel/: entry.hpp  level.hpp  order_queue.hpp  snapshot.hpp  statistics.hpp
include/lemon/utils/: uuid.hpp  value.hpp
scripts/: compare_pricelevel_benchmarks.py  run_pricelevel_benchmarks.sh
src/: entry.cpp
src/lemon/: entry.cpp  level.cpp  orderBook.cpp
tests/: order_queue_test.cpp  order_type_variant_test.cpp  price_level_invariant_test.cpp  price_level_snapshot_test.cpp  price_level_test.cpp
